<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="website" translatable="false">https://transportr.app/</string>
	<string name="website_source_app" translatable="false">"?utm_source=app"</string>
	<string name="website_source_shared" translatable="false">"?utm_source=shared_trip"</string>
	<string name="bug_tracker" translatable="false">https://github.com/grote/Transportr/issues?q=is%3Aissue</string>
	<string name="google_play_title" tools:keep="@string/google_play_title">Transportr - Open Source Public Transit</string>
	<string name="google_play_short_desc" tools:keep="@string/google_play_short_desc">Free Public Transport Assistant without Ads or Tracking</string>
	<string name="google_play_full_desc" tools:keep="@string/google_play_full_desc" tools:ignore="StringFormatInvalid"><![CDATA[
Transportr is a non-profit app developed by people around the world in their free time.
They want to make the use of public transport as easy as possible for everybody.

This app uses the data of various local public transport agencies
and provides a unified interface for them.
It can not verify the correctness of the data
and therefore <i>offers no guarantees</i> for the displayed information.
Please use at your own risk.

<b>🛣️ Trip Routing</b>. Just tell Transportr where you want to go!
It will find the best connections for you, advises you where to change buses,
and even gives you an estimated time of arrival.

<b>⏱️ Live Departures</b>. Shows upcoming departures from any and all stations.
In <i>supported</i> areas, real-time delays will be shown as well.

<b>🗽 Software Freedom</b>. The source code for Transportr is 100% open.
You can freely use, study, share and improve it.
This app is only as good as <i>you</i> make it.
You can even add your city yourself, if it is not already supported.

<b>🛰️ Finds your Position.</b> Transportr uses GPS satellite navigation
to keep track of your current position - so you never get lost.
You can find nearby stations to start a new trip
and then see how far along the journey you are.

<b>🌟 Remembers Favorite Places.</b> To get you where you need to go faster,
Transportr saves frequently used locations and trips.
That way you do not need to type them over and over again.

<b>🚫 No Ads, No Tracking</b>. This app does not display ads
or annoying notifications.
It also does not use tracking tools such as Google Analytics to spy on you.

<b>🗺️ Beautiful Maps</b>. Displays stations or your entire trip on a map
and always knows where you are to not miss where to get off the bus.
]]></string>
	<string name="drawer_settings">Settings</string>
	<string name="drawer_changelog">Changelog</string>
	<string name="drawer_about">About</string>
	<string name="drawer_contributors">Contributors</string>
	<string name="drawer_report_issue">Report Issue</string>
	<string name="action_fav_trip">Mark Trip as Favourite</string>
	<string name="action_unfav_trip">Unmark Trip as Favourite</string>
	<string name="action_switch_locations">Swap From and To</string>
	<string name="trip_dep">Departure</string>
	<string name="trip_arr">Arrival</string>
	<string name="action_refresh">Refresh</string>
	<string name="action_navigation_expand">Show Via</string>
	<string name="action_choose_products">Means of Transport</string>
	<string name="action_share">Share</string>
	<string name="action_trip_calendar">Add to Calendar</string>
	<string name="action_trip_delete">Delete Trip</string>
	<string name="action_show_on_external_map">Show on External Map</string>
	<string name="action_copy">Copy</string>
	<string name="directions">Directions</string>
	<string name="directions_search">Search Directions</string>
	<string name="drawer_departures">Departures</string>
	<string name="tab_about">About</string>
	<string name="tab_libraries">Libraries</string>
	<string name="about_copyright">© 2013 &#8211; 2023 Torsten Grote\nFree Software License: GPLv3+</string>
	<string name="about_description">Transportr is a public transport companion developed by people around the world to make using public transport as easy as possible wherever you are.</string>
	<string name="about_warning_title">Warning</string>
	<string name="about_warning_text">There is no guarantee for the correctness of the (externally provided) data. Please use this app only at your own risk.</string>
	<string name="about_contributions">This app is Free Software, so you can freely use, study, share and improve it. Contributions are encouraged and appreciated. If you would like to contribute, please visit the homepage for more information.</string>
	<string name="about_visit_website">Visit Website</string>
	<string name="jawg_styles_url" translatable="false">https://api.jawg.io/styles/</string>
	<string name="jawg_access_token" translatable="false">KxO8lF4U3kiO63m0c7lzqDCDrMUVg1OA2JVzRXxxmYSyjugr1xpe4W4Db5rFNvbQ</string>
	<string name="jawg_style_light" translatable="false">jawg-sunny</string>
	<string name="jawg_style_dark" translatable="false">jawg-dark</string>
	<string name="map_attribution" translatable="false">&lt;a href="http://jawg.io" title="Tiles Courtesy of Jawg Maps">© &lt;b>Jawg&lt;/b>Maps&lt;/a>, &lt;a href="https://www.openstreetmap.org/copyright" title="OpenStreetMap is open data licensed under ODbL">© OSM contributors&lt;/a>&lt;br/>&lt;b>&lt;a href="https://www.openstreetmap.org/fixthemap">%1$s&lt;/a>&lt;/b></string>
	<string name="map_attribution_improve">Improve this map</string>
	<string name="open_navigation_drawer">Open Navigation Drawer</string>
	<string name="from">From</string>
	<string name="to">To</string>
	<string name="via">Via</string>
	<string name="search_hint">Search here</string>
	<string name="from_here">From Here</string>
	<string name="to_here">To Here</string>
	<string name="clear_location">Clear Location</string>
	<string name="walk">Walk</string>
	<string name="alpha">alpha</string>
	<string name="beta">beta</string>
	<string name="network">Network</string>
	<string name="pick_network_activity">Choose Area</string>
	<string name="pick_network_first_run">Welcome to Transportr!\n\nPlease select the transportation network from your area in order to continue. You can change this at any time.</string>
	<string name="stations_searching_position">Searching for current position&#8230;</string>
	<string name="drawer_nearby_stations">Nearby Stations</string>
	<string name="find_nearby_stations">Find Nearby Stations</string>
	<string name="find_departures">Find Departures</string>
	<string name="share_trip_via">Share Trip Via&#8230;</string>
	<string name="show_location_in">Show Location In&#8230;</string>
	<string name="more">More</string>
	<string name="for_x_min">for %d min</string>
	<string name="change_time">Change Time</string>
	<string name="now">Now</string>
	<string name="now_small">now</string>
	<string name="yesterday">Yesterday</string>
	<string name="today">Today</string>
	<string name="tomorrow">Tomorrow</string>
	<string name="in_x_minutes">in %dmin</string>
	<string name="x_minutes_ago">%dmin ago</string>
	<string name="total_time">Total time: %s</string>
	<string name="time_picker_previous_day">Previous Day</string>
	<string name="time_picker_next_day">Next Day</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="pref_transport_network">Transport Network</string>
	<string name="pref_display">Display</string>
	<string name="pref_theme_title">Theme</string>
	<string name="pref_theme_light">Light</string>
	<string name="pref_theme_dark">Dark</string>
	<string name="pref_theme_auto_battery">Set by Battery Saver</string>
	<string name="pref_theme_auto_system">System default</string>
	<string name="pref_language_title">Language</string>
	<string name="pref_directions_routing">Directions and Trip Routing</string>
	<string name="pref_optimize">Optimize for</string>
	<string name="pref_optimize_least_duration">Least Duration</string>
	<string name="pref_optimize_least_changes">Least Changes</string>
	<string name="pref_optimize_least_walking">Least Walking</string>
	<string name="pref_walk_speed">Walk Speed</string>
	<string name="pref_walk_speed_slow">Slow</string>
	<string name="pref_walk_speed_normal">Normal</string>
	<string name="pref_walk_speed_fast">Fast</string>
	<string name="pref_show_when_locked_title">Show trip even when screen is locked</string>
	<string name="pref_show_when_locked_summary">Show over lock screen</string>
	<string name="error">Error</string>
	<string name="error_no_internet">Internet connection required. Please make sure your internet access is working.</string>
	<string name="error_connection_failure">Connection failed. Please try again.</string>
	<string name="error_trip_refresh_failed">Could not refresh data for current trip.</string>
	<string name="error_geo_intent">Could not open external location</string>
	<string name="error_find_nearby_stations">Could not find nearby stations</string>
	<string name="error_departures">Could not find any departures</string>
	<string name="error_no_calendar">No calendar installed :(</string>
	<string name="error_no_map">No external map installed :(</string>
	<string name="trip_error_ambiguous">Could not find the location. Please try searching with different locations.</string>
	<string name="trip_error_too_close">The \'from\' and the \'to\' location are too close together.</string>
	<string name="trip_error_unknown_from">Could not find the \'from\' location. Please try another one.</string>
	<string name="trip_error_unknown_via">Could not find the \'via\' location. Please try another one.</string>
	<string name="trip_error_unknown_to">Could not find the \'to\' location. Please try another one.</string>
	<string name="trip_error_unresolvable_address">Could not find the provided address. Please try another one.</string>
	<string name="trip_error_no_trips">No connections could be found :(</string>
	<string name="trip_error_invalid_date">The search date is currently not supported by the data provider. Please try another date.</string>
	<string name="trip_error_service_down">The data provider is currently down :(\nPlease try again later.</string>
	<string name="trip_error_pte">If you want to report this error, please report it to %1$s directly.</string>
	<string name="trip_issue">There might be a problem with this connection.</string>
	<string name="trip_not_travelable">Impossible or cancelled</string>
	<string name="try_again">Try Again</string>
	<string name="meter">%d m</string>
	<plurals name="stops">
		<item quantity="one">%d Stop</item>
		<item quantity="other">%d Stops</item>
	</plurals>
	<string name="platform">(Platform %s)</string>
	<string name="system_default">System Default</string>
	<string name="trip_share_date">Date: %s</string>
	<string name="times_include_delays">(Attention: Times may include reported delays)</string>
	<string name="created_by">Created by %s</string>
	<string name="home">Home</string>
	<string name="home_dialog_title">Set Home Location</string>
	<string name="widget_name_quickhome">Get Me Home</string>
	<string name="work">Work</string>
	<string name="work_hint">Set Work Location</string>
	<string name="widget_name_quickwork">Get To Work</string>
	<string name="tap_to_set">Tap to set</string>
	<string name="widget_name_favorites">%1$s to %2$s</string>
	<string name="widget_name_favorites_via">%1$s to %2$s (via %3$s)</string>
	<string name="action_set_locations">Edit search</string>
	<string name="action_swap_locations">Search return trip</string>
	<string name="action_change">Change</string>
	<string name="action_add_shortcut">Add Launcher Shortcut</string>
	<string name="location_gps">Use Current Position</string>
	<string name="warning_no_gps_fix">Could not locate your position, yet.</string>
	<string name="permission_denied_gps">You did not allow access to your location, so this functionality will not work. Please grant the permission in the app settings.</string>
</resources>