<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<TimePicker
		android:id="@+id/timePicker"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<ImageButton
		android:id="@+id/prevDateButton"
		android:layout_width="48dp"
		android:layout_height="0dp"
		android:layout_marginLeft="16dp"
		android:layout_marginStart="16dp"
		android:background="?attr/selectableItemBackground"
		app:srcCompat="@drawable/ic_chevron_left"
		android:tint="?attr/colorControlNormal"
		app:layout_constraintBottom_toBottomOf="@+id/dateView"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="@+id/dateView"
		android:contentDescription="@string/time_picker_previous_day"/>

	<TextView
		android:id="@+id/dateView"
		android:layout_width="0dp"
		android:layout_height="48dp"
		android:background="@android:color/transparent"
		android:gravity="center"
		android:text="@string/today"
		android:textSize="18sp"
		app:layout_constraintLeft_toRightOf="@+id/prevDateButton"
		app:layout_constraintRight_toLeftOf="@+id/nextDateButton"
		app:layout_constraintTop_toBottomOf="@+id/timePicker"/>

	<ImageButton
		android:id="@+id/nextDateButton"
		android:layout_width="48dp"
		android:layout_height="0dp"
		android:layout_marginEnd="16dp"
		android:layout_marginRight="16dp"
		android:background="?attr/selectableItemBackground"
		app:srcCompat="@drawable/ic_chevron_right"
		android:tint="?attr/colorControlNormal"
		app:layout_constraintBottom_toBottomOf="@+id/dateView"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="@+id/dateView"
		android:contentDescription="@string/time_picker_next_day"/>

	<Button
		android:id="@+id/cancelButton"
		style="@style/Widget.AppCompat.Button.Borderless.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginRight="8dp"
		android:text="@string/cancel"
		app:layout_constraintBottom_toBottomOf="@+id/okButton"
		app:layout_constraintRight_toLeftOf="@+id/nowButton"
		app:layout_constraintTop_toTopOf="@+id/okButton"/>

	<Button
		android:id="@+id/nowButton"
		style="@style/Widget.AppCompat.Button.Borderless.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginRight="8dp"
		android:text="@string/now"
		app:layout_constraintBottom_toBottomOf="@+id/okButton"
		app:layout_constraintRight_toLeftOf="@+id/okButton"
		app:layout_constraintTop_toTopOf="@+id/okButton"/>

	<Button
		android:id="@+id/okButton"
		style="@style/Widget.AppCompat.Button.Borderless.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/ok"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/dateView"/>

</android.support.constraint.ConstraintLayout>
