<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<ImageView
			android:id="@+id/appIcon"
			android:layout_width="64dp"
			android:layout_height="64dp"
			android:layout_margin="16dp"
			android:contentDescription="@string/app_name"
			android:src="@mipmap/ic_launcher"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>

		<TextView
			android:id="@+id/appNameVersion"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp"
			android:layout_marginStart="16dp"
			android:textColor="?android:textColorPrimary"
			android:textSize="16sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/appIcon"
			app:layout_constraintTop_toTopOf="@+id/appIcon"
			tools:text="Transportr 2.0.0"/>

		<TextView
			android:id="@+id/copyright"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginTop="8dp"
			android:text="@string/about_copyright"
			app:layout_constraintBottom_toBottomOf="@+id/appIcon"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/appNameVersion"
			app:layout_constraintTop_toBottomOf="@+id/appNameVersion"/>

		<TextView
			android:id="@+id/aboutTextView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:text="@string/about_description"
			android:textColor="?android:textColorPrimary"
			android:textSize="16sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/appIcon"/>

		<androidx.cardview.widget.CardView
			android:id="@+id/cardView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="16dp"
			style="@style/ErrorCard"
			app:cardUseCompatPadding="false"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/aboutTextView">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_margin="16dp"
				android:orientation="vertical">

				<TextView
					android:id="@+id/warningTitle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/about_warning_title"
					style="@style/ErrorCard"
					android:textSize="16sp"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/warningText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:text="@string/about_warning_text"
					style="@style/ErrorCard"
					android:textSize="16sp" />
			</LinearLayout>

		</androidx.cardview.widget.CardView>

		<TextView
			android:id="@+id/contributions"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="16dp"
			android:text="@string/about_contributions"
			android:textColor="?android:textColorPrimary"
			android:textSize="16sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/cardView" />

		<Button
			android:id="@+id/websiteButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/about_visit_website"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/contributions"/>

	</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
