<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:animateLayoutChanges="true"
	android:paddingBottom="8dp"
	tools:showIn="@layout/activity_directions">

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		style="@style/ToolbarStyle"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="@dimen/buttonSize">

			<ImageView
				android:id="@+id/favIcon"
				android:layout_width="@dimen/buttonSize"
				android:layout_height="@dimen/buttonSize"
				android:layout_toLeftOf="@+id/timeIcon"
				android:layout_toStartOf="@+id/timeIcon"
				android:background="?selectableItemBackgroundBorderless"
				android:clickable="true"
				android:contentDescription="@string/action_fav_trip"
				android:focusable="true"
				android:scaleType="center"
				android:tint="@color/md_white_1000"
				android:visibility="gone"
				app:srcCompat="@drawable/ic_action_star_empty"
				tools:visibility="visible"/>

			<ImageView
				android:id="@+id/timeIcon"
				android:layout_width="@dimen/buttonSize"
				android:layout_height="@dimen/buttonSize"
				android:layout_toLeftOf="@+id/time"
				android:layout_toStartOf="@+id/time"
				android:background="?selectableItemBackgroundBorderless"
				android:clickable="true"
				android:focusable="true"
				android:scaleType="center"
				app:srcCompat="@drawable/ic_time"
				tools:ignore="ContentDescription"/>

			<TextView
				android:id="@+id/date"
				android:layout_width="wrap_content"
				android:layout_height="24dp"
				android:layout_alignParentEnd="true"
				android:layout_alignParentRight="true"
				android:layout_alignParentTop="true"
				android:background="?selectableItemBackgroundBorderless"
				android:clickable="true"
				android:focusable="true"
				android:gravity="center"
				android:visibility="gone"
				tools:text="2042-12-23"
				tools:visibility="visible"/>

			<TextView
				android:id="@+id/time"
				android:layout_width="wrap_content"
				android:layout_height="24dp"
				android:layout_alignLeft="@+id/date"
				android:layout_alignParentEnd="true"
				android:layout_alignParentRight="true"
				android:layout_alignStart="@+id/date"
				android:layout_below="@+id/date"
				android:layout_centerInParent="true"
				android:background="?selectableItemBackgroundBorderless"
				android:clickable="true"
				android:focusable="true"
				android:gravity="center"
				android:text="@string/now"/>

		</RelativeLayout>

	</android.support.v7.widget.Toolbar>

	<android.support.v7.widget.CardView
		android:id="@+id/fromCard"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginStart="8dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/toolbar">

		<de.grobox.transportr.locations.LocationGpsView
			android:id="@+id/fromLocation"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:hint="@string/from"/>

	</android.support.v7.widget.CardView>

	<android.support.v7.widget.CardView
		android:id="@+id/viaCard"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:visibility="gone"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/fromCard"
		tools:visibility="visible">

		<de.grobox.transportr.locations.LocationView
			android:id="@+id/viaLocation"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:hint="@string/via"/>

	</android.support.v7.widget.CardView>

	<android.support.v7.widget.CardView
		android:id="@+id/toCard"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/viaCard">

		<de.grobox.transportr.locations.LocationView
			android:id="@+id/toLocation"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:hint="@string/to"/>

	</android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
