<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
	style="@style/FavoriteCard"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<ImageView
			android:id="@+id/logo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp"
			app:tint="?colorControlNormal"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@drawable/ic_action_home"
			tools:ignore="ContentDescription"/>

		<TextView
			android:id="@+id/title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:text="@string/home"
			android:textAppearance="@style/TextAppearance.AppCompat.Body1"
			android:textSize="18sp"
			android:textStyle="normal|bold"
			app:layout_constraintLeft_toRightOf="@+id/logo"
			app:layout_constraintTop_toTopOf="parent"/>

		<TextView
			android:id="@+id/description"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginTop="4dp"
			android:text="@string/tap_to_set"
			android:textSize="12sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintLeft_toLeftOf="@+id/title"
			app:layout_constraintRight_toLeftOf="@+id/overflowButton"
			app:layout_constraintTop_toBottomOf="@+id/title"/>

		<ImageButton
			android:id="@+id/overflowButton"
			android:layout_width="48dp"
			android:layout_height="48dp"
			android:background="?selectableItemBackgroundBorderless"
			android:clickable="true"
			android:contentDescription="@string/more"
			android:focusable="true"
			app:tint="?colorControlNormal"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@drawable/ic_more_vert"/>

	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
